--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flame: ^1.29.0
   flame_forge2d: ^0.19.0+2
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
